commit 4 for spidpay

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -178,4 +178,5 @@
     <string name="cashwithdrwal">Cash Withdrwal</string>
     <string name="balanceenquiry">Balance Enquiry</string>
     <string name="ministatement">Mini Statement</string>
+    <string name="inrestedfor">Interested for</string>
 </resources>
