commit 04-07-2021  time for spidpay

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -205,4 +205,5 @@
     <string name="paymentstatus">Success</string>
     <string name="rechargeamt">Recharge Amount</string>
     <string name="backtohome">Back to Home</string>
+    <string name="norecordfound">No Record Found!</string>
 </resources>
