--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -234,4 +234,8 @@
     <string name="transfer_amount">Transfer Amout</string>
     <string name="servicecharge">Service Charge</string>
     <string name="enteramountcannot">Entered amount cannot be greater than total balance!</string>
+    <string name="transferrequestsuccessful">TRANSFER SUCCESSFUL</string>
+    <string name="transfermoney1">Your request for transferring money </string>
+    <string name="transfermoney2">to your Spid wallet has been complete successfully</string>
+    <string name="comingsoon">Coming soon!</string>
 </resources>
