28-08-2021 trade wallet changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -254,4 +254,5 @@
     <string name="cashtobe">Cash to be collected</string>
     <string name="moneytransferedamount">Money transferred amount</string>
     <string name="sendername">Sender Name</string>
+    <string name="transfermode">TransferMode</string>
 </resources>
