--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -285,5 +285,9 @@
     <string name="camera">From Camera</string>
     <string name="gallery">From Gallery</string>
     <string name="cancel">Cancel</string>
+    <string name="paytmnumber">Enter mobile number registered in paytm</string>
+    <string name="transactionmode">Transaction Mode</string>
+    <string name="neft">NEFT</string>
+    <string name="imps">IMPS</string>
 
 </resources>
