--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,6 +89,7 @@
     <string name="available_balance">Available Trade Balance</string>
     <string name="available_sp_balance"> Available SpidWallet Balance</string>
     <string name="enteramount">Enter Amount</string>
+    <string name="enter_transfer_amount">Enter Transfer Amount</string>
     <string name="proceed">Proceed</string>
     <string name="moneyaddedtowallet">Money will be added to Wallet</string>
     <string name="selectbank">Select Bank</string>
@@ -247,7 +248,9 @@
     <string name="enteramountcannot">Entered amount cannot be 0 or greater than total balance!</string>
     <string name="transferrequestsuccessful">TRANSFER SUCCESSFUL</string>
     <string name="transfermoney1">Your request for transferring money </string>
-    <string name="transfermoney2">to your Spid wallet has been complete successfully</string>
+    <string name="transfermoney_spwallet">to your Spid wallet has been complete successfully</string>
+    <string name="transfermoney_paytm">to your Paytm has been complete successfully</string>
+    <string name="transfermoney_bank">to your Bank Account has been complete successfully</string>
     <string name="comingsoon">Coming soon!</string>
     <string name="sendermobilenumber">Sender Mobile Number</string>
     <string name="registersender">Register Sender</string>
@@ -291,5 +294,6 @@
     <string name="transactionmode">Transaction Mode</string>
     <string name="neft">NEFT</string>
     <string name="imps">IMPS</string>
+    <string name="selecttransfermode">Select TransferMode</string>
 
 </resources>
